Computed input region at startup uses wrong stage transformation
As per commit mutter@14c706e5 the workaround for bug https://bugzilla.gnome.org/show_bug.cgi?id=761565 doesn't work anymore as the picking isn't done when anything cached changes.
This also causes a wrong input region to be set but also struts as visible when using dash-to-dock extension:
Screencast_18-09-2019_16_46_42
Adding a simple print on startup you can easily see that all the actors transformed coordinates and sizes are messed up:
[0x55e0197db840 StWidget "overviewGroup" ("")] pos 0.0000476837158203125 0 size 3999.999267578125 1878.333251953125
[0x55e0197dcf50 StWidget "screenShieldGroup"] pos 0.0000476837158203125 0 size 3999.999267578125 1763.333251953125
[0x55e0197ded30 StBoxLayout "panelBox"] pos 0.0000476837158203125 0 size 3999.999267578125 51.75
[0x55e0197e6870 StBoxLayout "keyboardBox"] pos 0.0000476837158203125 1763.33349609375 size 3999.999267578125 0
[0x55e018fbf190 ClutterActor "hot-corner-environs"] pos 0.0000476837158203125 0 size 7.500028610229492 5.75
[0x55e019b173e0 Gjs_BoxPointer.candidate-popup-boxpointer ("")] pos 0.0000476837158203125 0 size 40.00000762939453 51.75
[0x55e019b94730 StWidget "notification-container"] pos 0.0000476837158203125 0 size 0 0
[0x55e01a7d69d0 StLabel.dash-label ("")] pos 0.0000476837158203125 0 size 67.5000228881836 51.75
[0x55e01acca9d0 StLabel.dash-label ("")] pos 0.0000476837158203125 0 size 67.5000228881836 51.75
[0x55e01ae56c80 Gjs_DashToDock_DashSlideContainer] pos 0.0000476837158203125 0 size 187.5 1763.333251953125
[0x55e01b3fc720 ClutterActor] pos 0.0000476837158203125 0 size 3999.999267578125 1763.333251953125
Edited by Marco Trevisan